fix: scope Unity Catalog Integration to a single upstream catalog (#540)