@@ -55,6 +55,7 @@ final class UnityCatalogAccessClient implements CatalogClient {
   private final AutoCloseable authenticationOwner;
   private final DeltaLogStorageProbe storageValidator;
   private final Map<String, String> storageRouting;
+  private final String catalog;
   private final AtomicBoolean closed = new AtomicBoolean();
 
   /**
@@ -89,11 +90,13 @@ final class UnityCatalogAccessClient implements CatalogClient {
       UnityCatalogClient unity,
       AutoCloseable authenticationOwner,
       DeltaLogStorageProbe storageValidator,
-      Map<String, String> storageRouting) {
+      Map<String, String> storageRouting,
+      String catalog) {
     this.unity = Objects.requireNonNull(unity, "unity");
     this.authenticationOwner = authenticationOwner;
     this.storageValidator = Objects.requireNonNull(storageValidator, "storageValidator");
     this.storageRouting = Map.copyOf(Objects.requireNonNull(storageRouting, "storageRouting"));
+    this.catalog = catalog;
   }
 
   @Override
@@ -103,7 +106,11 @@ final class UnityCatalogAccessClient implements CatalogClient {
 
   @Override
   public void validate() {
-    UnityCatalogErrors.run("connection validation", unity::listCatalogs);
+    if (catalog == null) {
+      UnityCatalogErrors.run("connection validation", unity::listCatalogs);
+    } else {
+      UnityCatalogErrors.run("connection validation", () -> unity.listSchemas(catalog));
+    }
   }
 
   @Override
@@ -113,17 +120,24 @@ final class UnityCatalogAccessClient implements CatalogClient {
         "namespace listing",
         () -> {
           if (parent.segments().isEmpty()) {
-            return unity.listCatalogs().stream()
+            if (catalog == null) {
+              return unity.listCatalogs().stream()
+                  .filter(name -> !name.isBlank())
+                  .map(name -> new NamespacePath(List.of(name)))
+                  .sorted()
+                  .toList();
+            }
+            return unity.listSchemas(catalog).stream()
                 .filter(name -> !name.isBlank())
                 .map(name -> new NamespacePath(List.of(name)))
                 .sorted()
                 .toList();
           }
-          if (parent.segments().size() == 1) {
-            String catalog = parent.segments().getFirst();
-            return unity.listSchemas(catalog).stream()
+          if (catalog == null && parent.segments().size() == 1) {
+            String parentCatalog = parent.segments().getFirst();
+            return unity.listSchemas(parentCatalog).stream()
                 .filter(name -> !name.isBlank())
-                .map(name -> new NamespacePath(List.of(catalog, name)))
+                .map(name -> new NamespacePath(List.of(parentCatalog, name)))
                 .sorted()
                 .toList();
           }
@@ -436,8 +450,12 @@ final class UnityCatalogAccessClient implements CatalogClient {
     return relations;
   }
 
-  private static String fullName(CatalogObjectName name) {
-    List<String> segments = new ArrayList<>(name.namespace().segments());
+  private String fullName(CatalogObjectName name) {
+    List<String> segments = new ArrayList<>();
+    if (catalog != null) {
+      segments.add(catalog);
+    }
+    segments.addAll(name.namespace().segments());
     segments.add(name.name());
     return String.join(".", segments);
   }
@@ -445,31 +463,36 @@ final class UnityCatalogAccessClient implements CatalogClient {
   /**
    * The schema a listing should read, or {@code null} when the namespace cannot hold one.
    *
-   * <p>Listing is not addressing. Unity keeps tables in {@code catalog.schema}, so "what tables are
-   * in this catalog?" has a true answer -- none -- and a namespace walk that asks is behaving
-   * correctly, not misconfigured. {@code listNamespaces} hands out one-segment catalog paths by
-   * design, and {@code CatalogOverlayReconciler} lists tables for every namespace an overlay
-   * selects, which with no include filters is all of them: the documented default. Throwing here
-   * failed every unfiltered overlay against a Unity workspace on the first catalog it reached.
+   * <p>A scoped Integration uses one namespace segment for its schema. An unscoped Integration
+   * preserves the original two-segment catalog/schema namespace shape. Other depths cannot hold
+   * tables.
    *
    * <p>{@link #requireSchema} still throws for {@code loadTable}, vending and validation, where a
    * namespace of the wrong depth is a caller naming an object that cannot exist.
    */
-  private static Namespace schemaOrNull(NamespacePath namespace) {
+  private Namespace schemaOrNull(NamespacePath namespace) {
     Objects.requireNonNull(namespace, "namespace");
-    return namespace.segments().size() == 2
-        ? new Namespace(namespace.segments().get(0), namespace.segments().get(1))
+    if (catalog == null) {
+      return namespace.segments().size() == 2
+          ? new Namespace(namespace.segments().get(0), namespace.segments().get(1))
+          : null;
+    }
+    return namespace.segments().size() == 1
+        ? new Namespace(catalog, namespace.segments().getFirst())
         : null;
   }
 
-  private static Namespace requireSchema(NamespacePath namespace) {
+  private Namespace requireSchema(NamespacePath namespace) {
     Objects.requireNonNull(namespace, "namespace");
-    if (namespace.segments().size() != 2) {
+    Namespace names = schemaOrNull(namespace);
+    if (names == null) {
       throw new CatalogAccessException(
           CatalogAccessException.Code.INVALID_CONFIGURATION,
-          "Unity Catalog table namespaces must contain catalog and schema");
+          catalog == null
+              ? "Unity Catalog table namespaces must contain catalog and schema"
+              : "Unity Catalog table namespaces must contain exactly one schema");
     }
-    return new Namespace(namespace.segments().get(0), namespace.segments().get(1));
+    return names;
   }
 
   /**
@@ -535,7 +558,7 @@ final class UnityCatalogAccessClient implements CatalogClient {
    * purpose: an INVALID_CONFIGURATION from listing or loading really does describe the Integration,
    * and still ends the walk.
    */
-  private static RuntimeException credentialRouteFailure(
+  private RuntimeException credentialRouteFailure(
       CatalogObjectName name, UnityCatalogException failure) {
     if (failure.failure() != UnityCatalogException.Failure.INVALID_REQUEST) {
       return failure;
@@ -586,7 +609,7 @@ final class UnityCatalogAccessClient implements CatalogClient {
    * none for view columns; for a view's output schema position is the identity, which is what a
    * reader resolving output columns needs.
    */
-  private static String viewSchemaJson(CatalogObjectName name, UnityCatalogTable table) {
+  private String viewSchemaJson(CatalogObjectName name, UnityCatalogTable table) {
     requireColumns(name, table, "view");
     var fields = JSON.createArrayNode();
     int[] nextId = {1};
@@ -786,7 +809,7 @@ final class UnityCatalogAccessClient implements CatalogClient {
   /**
    * Both load paths funnel through a schema builder, so the guard belongs here rather than twice.
    */
-  private static void requireColumns(CatalogObjectName name, UnityCatalogTable table, String kind) {
+  private void requireColumns(CatalogObjectName name, UnityCatalogTable table, String kind) {
     if (table.columns().isEmpty()) {
       // Refused per object rather than published as an empty schema. parseColumns treats an absent
       // or JSON-null "columns" as an empty list even in strict mode -- only a malformed one raises
@@ -801,7 +824,7 @@ final class UnityCatalogAccessClient implements CatalogClient {
     }
   }
 
-  private static String schemaJson(CatalogObjectName name, UnityCatalogTable table) {
+  private String schemaJson(CatalogObjectName name, UnityCatalogTable table) {
     requireColumns(name, table, "table");
     var fields = JSON.createArrayNode();
     for (UnityCatalogTable.Column column : table.columns()) {
